[project]
name = "kbeats-matcher"
version = "0.1.0"
description = "K-Beats Dance Matcher Streamlit Application"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "pandas",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []